--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Maven+Pro:wght@400;600;800&display=swap" rel="stylesheet">
         <meta charset="UTF-8">
+        <meta name="author" content="Aleksandar Kostić" />
+        <meta name="description" content="Detailing centar AK, salon nege i lepote za vaše vozilo" />
+        <meta name="keywords" content="Detailing, Automobili, Vozila, Pranje, Dubinsko, Čišćenje, Poliranje, AK, Dekontaminacija"/>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css">
         <link rel="icon" href="img/logo-footer.png">
     </head>
