--- a/o-autoru.html
+++ b/o-autoru.html
@@ -33,7 +33,7 @@
       <img src="img/portret.jpg" alt="slika-autora">
       <div class="about-me-text">
           <h5>Aleksandar Kostić<br/>37/21</h5>
-          <p>Student prve godine Visoke ICT škole u Beogradu, smer "Internet tehnologije". Završio sam srednju Elektrotehničku školu "Nikola Tesla" u Beogradu, smer "Elektrotehničar multimedija".</p>
+          <p>Student sam prve godine Visoke ICT škole u Beogradu, smer "Internet tehnologije". Završio sam srednju Elektrotehničku školu "Nikola Tesla" u Beogradu, smer "Elektrotehničar multimedija".</p>
       </div>
   </div>
 </section>
