--- a/kontakt.html
+++ b/kontakt.html
@@ -1,19 +1,22 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8"/>
     <title>AK Detailing-Kontakt</title>
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Maven+Pro:wght@400;600;800&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css">
+    <link rel="stylesheet" href="css/style.css"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com"/>
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
+<link href="https://fonts.googleapis.com/css2?family=Maven+Pro:wght@400;600;800&display=swap" rel="stylesheet"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css"/>
+    <meta name="author" content="Aleksandar Kostić" />
+        <meta name="description" content="Detailing centar AK kontakt." />
+        <meta name="keywords" content="Detailing, Automobili, Vozila, Pranje, Dubinsko, Čišćenje, Poliranje, AK, Dekontaminacija, Telefon, Kontakt, Lokacija, Radno vreme, Forma, Email"/>
   </head>
   <body class="body-kontakt">
 
 
   <nav class="nav-kontakt">
-    <a href="index.html"><img src="img/logo-footer.png" alt="logo" class="logo-nav"></a>
+    <a href="index.html"><img src="img/logo-footer.png" alt="logo" class="logo-nav"/></a>
 <ul>
     <li><a href="index.html">Home</a></li>
     <li><a href="index.html#usluge">Usluge</a></li>
