--- a/o-autoru.html
+++ b/o-autoru.html
@@ -8,6 +8,9 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Maven+Pro:wght@400;600;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css">
+    <meta name="author" content="Aleksandar Kostić" />
+        <meta name="description" content="Detailing centar AK, o autoru sajta" />
+        <meta name="keywords" content="Detailing, Automobili, Vozila, Pranje, Dubinsko, Čišćenje, Poliranje, AK, Dekontaminacija, Autor, Sajt, Informacije"/>
   </head>
   <body class="body-kontakt">
 
