--- a/cenovnik.html
+++ b/cenovnik.html
@@ -4,13 +4,14 @@
     <title>AK Detailing-Cenovnik</title>
     <link rel="stylesheet" type="text/css" href="css/style.css"/>
     <link rel="preconnect" href="https://fonts.googleapis.com"/>
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
-<link href="https://fonts.googleapis.com/css2?family=Maven+Pro:wght@400;600;800&display=swap" rel="stylesheet"/>
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
+    <link href="https://fonts.googleapis.com/css2?family=Maven+Pro:wght@400;600;800&display=swap" rel="stylesheet"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css"/>
     <meta charset="UTF-8">/
     <meta name="author" content="Aleksandar Kostić" />
-        <meta name="description" content="Detailing centar AK cenovnik i ponuda nasih usluga" />
-        <meta name="keywords" content="Detailing, Automobili, Vozila, Pranje, Dubinsko, Čišćenje, Poliranje, AK, Dekontaminacija, Cene, Usluge, Ponude"/>
+    <meta name="description" content="Detailing centar AK cenovnik i ponuda nasih usluga" />
+    <meta name="keywords" content="Detailing, Automobili, Vozila, Pranje, Dubinsko, Čišćenje, Poliranje, AK, Dekontaminacija, Cene, Usluge, Ponude"/>
+    <link rel="icon" href="img/logo-footer.png"/>
 </head>
 <body class="body-cenovnik">
 
