--- a/o-autoru.html
+++ b/o-autoru.html
@@ -4,13 +4,14 @@
     <meta charset="utf-8">
     <title>AK Detailing-Kontakt</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" href="img/logo-footer.png"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Maven+Pro:wght@400;600;800&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Maven+Pro:wght@400;600;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css">
     <meta name="author" content="Aleksandar Kostić" />
-        <meta name="description" content="Detailing centar AK, o autoru sajta" />
-        <meta name="keywords" content="Detailing, Automobili, Vozila, Pranje, Dubinsko, Čišćenje, Poliranje, AK, Dekontaminacija, Autor, Sajt, Informacije"/>
+    <meta name="description" content="Detailing centar AK, o autoru sajta" />
+    <meta name="keywords" content="Detailing, Automobili, Vozila, Pranje, Dubinsko, Čišćenje, Poliranje, AK, Dekontaminacija, Autor, Sajt, Informacije"/>
   </head>
   <body class="body-kontakt">
 
